# chat_for_protei

./: README.md
boosttest/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  log  log.cpp  server.cpp  test.cpp
boosttest/client/: CMakeCache.txt  CMakeLists.txt  Makefile  chat_message.hpp  cmake_install.cmake
boosttest/server/: CMakeCache.txt  Makefile  cmake_install.cmake  server  server.cpp
client/: CMakeCache.txt  Makefile  client  client.cpp  client2.cpp  cmake_install.cmake
server/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  server  server.cpp  server2.cpp
